kubernetes/admin-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-service-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: admin-service
  template:
    metadata:
      labels:
        app: admin-service
    spec:
      containers:
      - name: admin-service
        image: "${DOCKER_USERNAME}/hmis-admin-service:${DOCKER_TAG:-latest}"
        imagePullPolicy: Always
