kubernetes/auth-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
      - name: auth-service
        image: "${DOCKER_USERNAME}/hmis-auth-service:${DOCKER_TAG:-latest}"
        imagePullPolicy: Always
