kubernetes/doc-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: doc-service-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: doc-service
  template:
    metadata:
      labels:
        app: doc-service
    spec:
      containers:
      - name: doc-service
        image: "${DOCKER_USERNAME}/hmis-doc-service:${DOCKER_TAG:-latest}"
        imagePullPolicy: Always
