kubernetes/pharmacy-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pharmacy-service-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: pharmacy-service
  template:
    metadata:
      labels:
        app: pharmacy-service
    spec:
      containers:
      - name: pharmacy-service
        image: "${DOCKER_USERNAME}/hmis-pharmacy-service:${DOCKER_TAG:-latest}"
        imagePullPolicy: Always
