kubernetes/reception-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reception-service-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: reception-service
  template:
    metadata:
      labels:
        app: reception-service
    spec:
      containers:
      - name: reception-service
        image: "${DOCKER_USERNAME}/hmis-reception-service:${DOCKER_TAG:-latest}"
        imagePullPolicy: Always
