kubernetes/admin-service.yml
apiVersion: v1
kind: Service
metadata:
  name: admin-service
spec:
  selector:
    app: admin-service
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
