kubernetes/doc-service.yml
apiVersion: v1
kind: Service
metadata:
  name: doc-service
spec:
  selector:
    app: doc-service
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
