kubernetes/pharmacy-service.yml
apiVersion: v1
kind: Service
metadata:
  name: pharmacy-service
spec:
  selector:
    app: pharmacy-service
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
