kubernetes/reception-service.yml
apiVersion: v1
kind: Service
metadata:
  name: reception-service
spec:
  selector:
    app: reception-service
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
